--- a/task1/package.json
+++ b/task1/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
